<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">湘行天下</string>
    <string name="homePage">首页</string>
    <string name="record">记录</string>
    <string name="around">周边</string>
    <string name="profile">我的</string>

    <string name="park_record">停车记录</string>
    <string name="pay_record">缴费记录</string>
    <string name="recharge_record">充值记录</string>
    <string name="around_service">周边服务</string>
    <string name="user_info">个人中心</string>
    <string name="userInfo">个人信息</string>

    <string name="find_park">寻找车位</string>
    <string name="my_park">我要停车</string>
    <string name="parklotlist">停车场列表</string>
    <string name="parklotdetail">停车场详情</string>
    <string name="pay_park">缴      费</string>
    <string name="stop_topay">停车缴费</string>
    <string name="pay_other">代缴停车</string>

    <string name="my_scan">我的二维码</string>
    <string name="park_rent">车位租赁</string>
    <string name="lift_service">生活服务</string>
    <string name="find_parkpos">寻找车位</string>

    <string name="scan_scan">扫一扫</string>
    <string name="pay_code">付款码</string>

    <string name="update">版本更新</string>
    <string name="my_acount">我的账户</string>
    <string name="my_money">我的钱包</string>
    <string name="cart_manage">车辆管理</string>
    <string name="feed_back">意见反馈</string>
    <string name="about_mine">关于我们</string>
    <string name="logout">安全退出</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="fetchpsw">取回密码</string>

    <string name="acount_secrity">账户安全</string>
    <string name="change_logpsw">修改登录密码</string>
    <string name="change_paypsw">修改支付密码</string>
    <string name="change_findpaypsw">找回支付密码</string>
    <string name="yuer">余额：</string>
    <string name="submit">提交</string>
    <string name="alipay">支付宝</string>
    <string name="weixin">微信</string>
    <string name="bank">银联在线</string>
    <string name="recharge">账户充值</string>

    <string name="getcode">获取验证码</string>
    <string name="agreed">我已阅读同意</string>
    <string name="agreedXieyi">服务协议</string>
    <string name="agreedment">哒哒停车用户服务协议</string>
    <string name="youphone">你的手机号码：</string>
    <string name="phone">手机号</string>
    <string name="pswLimit">6一16位字符,请使用字母加数字或符号的组合，不能使用纯数字</string>
    <string name="payPswLimit">支付密码请使用6位纯数字</string>
    <string name="finish">完成</string>
    <string name="pswTishi">密码提示</string>
    <string name="onceLogin">立即登录</string>
    <string name="onceRegister">立即注册</string>
    <string name="forgetpsw">忘记密码</string>
    <string name="psw">密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_car_no">请输入车牌号</string>

    <!-- 银联支付 -->
    <string name="entryTitle">接入方式选择</string>
    <string name="apk">apk接入</string>
    <string name="jar">银联sdk接入</string>
    <string name="payBYAPK">APK接入</string>
    <string name="payBYJAR">JAR接入</string>

    <!-- 扫一扫 -->
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>

    <string name="onroad_page_hint">温馨提示：“我要停车”只能进行路边停车，若您在停车场停车，无需进行此操作，在结束停车后点击“停车缴费”即可。</string>

    <!--关于我们-->
    <!--<string name="copyright_1">哒哒停车\t版权所有</string>-->
    <string name="copyright_1">技术服务：深圳市奥肯特科技有限公司</string>
    <string name="copyright_2">Copyright @ 长沙湘行智慧交通科技有限公司 All Rights Reserved</string>

    <string name="agreement">\u3000\u3000请仔细阅读本协议，本APP平台将依据以下条件和条款为您提供服务。\n
\u3000\u3000欢迎阅读本APP平台用户协议(下称“本协议”)。本协议阐述之条款和条件适用于您使用本APP平台所提供的各种工具和服务(下称“服务”)\n

\u3000\u30001．服务条款的确认\n
\u3000\u3000App平台根据本服务条款及对该条款的修改向用户提供服务。本服务条款具有合同法上的法律效力。\n
如果您对协议的任何条款表示异议，您可以选择不注册，一旦您点选“注册”并通过注册程序，即表示您自愿接受本协议之所有条款，并已成为本APP平台的注册会员。用户在使用本APP平台的同时，同意接受本APP平台会员服务提供的各类信息服务。\n
\u3000\u30002．服务内容及修改、中断、终止\n
\u3000\u30002.1 本APP平台服务的具体内容由本平台根据实际情况提供，并对所提供之服务拥有最终解释权。\n
\u3000\u30002.2 本APP平台仅向其会员提供相关服务，与相关服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均由会员自行负担。\n
\u3000\u30002.3 鉴于网络服务的特殊性，用户同意本APP平台有权不经事先通知，随时变更、中断或终止部分或全部的网络服务（包括收费网络服务）。本APP平台不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。\n
\u3000\u30002.4 本APP平台需要定期或不定期地对提供网络服务的平台或相关的设备进行检修或者维护，如因此类情况而造成网络服务（包括收费网络服务）在合理时间内的中断，本APP平台无需为此承担任何责任。本APP平台保留不经事先通知为维修保养、升级或其它目的暂停全部或部分的网络服务的权利。\n
\u3000\u30002.5 用户明确同意其使用本APP平台网络服务所存在的风险将完全由其自己承担。用户理解并接受下载或通过本APP平台服务而链接及得到的资讯、产品及服务均系本APP平台自动搜录，本APP平台对其合法性概不负责，亦不承担任何法律责任，用户自行承担风险，本APP平台不做任何形式的保证，不保证搜索结果满足用户的要求，不保证搜索服务不中断，对搜索结果的安全性、正确性、及时性、合法性均不做担保。\n
\u3000\u30002.6 本APP平台对超过6个月未登录使用的帐号，保留关闭的权利。\n
\u3000\u30002.7 本APP平台有权于任何时间暂时或永久修改或终止本服务（或其任何部分），而无论其通知与否，本APP平台对用户和任何第三人均无需承担任何责任。\n
\u3000\u30002.8 您同意本APP平台得基于其自行之考虑，因任何理由，包含但不限于长时间未使用，或本APP平台认为您已经违反本服务协议的文字及精神，终止您的密码、帐号或本服务之使用（或服务之任何部分），并将您在本服务内任何内容加以移除并删除。您同意依本服务协议任何规定提供之服务，无需进行事先通知即可中断或终止，您承认并同意，本APP平台可立即关闭或删除您的帐号及您帐号中所有相关信息及文件，或禁止继续使用前述文件或本服务。\n
此外，您同意若本服务之使用被中断或终止或您的帐号及相关信息和文件被关闭或删除，本APP平台对您或任何第三人均不承担任何责任。\n
\u3000\u30003．会员帐号及密码\n
\u3000\u3000用户注册会员成功后，本APP平台将给予每个会员一个帐号及相应的密码，该帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。\n
因黑客行为或会员保管疏忽致使帐号、密码被他人非法使用的，本公司不承担任何责任。如您发现任何非法使用会员帐号或安全漏洞的情况，请立即与本公司联系。\n
\u3000\u30004. 注册信息和隐私保护\n
\u3000\u30004.1 本APP平台帐号（即本APP平台用户ID）的所有权归本APP平台，用户完成注册申请手续后，获得本APP平台帐号的使用权。用户应提供及时、详尽及准确的个人资料，并不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将作为注册资料。如果因用户注册信息不真实而引起的问题及其产生的后果，本APP平台不负任何责任。\n
\u3000\u30004.2 用户不得将其帐号、密码转让或出借予他人使用。如发现其帐号遭他人非法使用，应立即通知本APP平台。\n
\u3000\u30004.3 本APP平台不对外公开或向第三方提供单个用户的注册资料，除非：\n
\u3000\u3000• 事先获得用户的明确授权；\n
\u3000\u3000• 只有透露你的个人资料，才能提供你所要求的产品和服务；\n
\u3000\u3000• 根据有关的法律法规要求；\n
\u3000\u3000• 按照相关政府主管部门的要求；\n
\u3000\u3000• 为维护本APP平台的合法权益。\n
\u3000\u30004.4 在您注册本APP平台帐户，使用本APP平台产品或服务，或访问本APP平台网页时，本APP平台会收集您的个人身份识别资料，并会将这些资料用于：改进为您提供的服务及网页内容。\n
\u3000\u30005. 用户权责\n
\u3000\u30005.1符合下列条件之一的个人、组织，才能申请成为本APP平台用户、使用本协议项下的服务：\n
\u3000\u30005.1.1 年满十八周岁，并具有民事权利能力和民事行为能力的自然人；\n
\u3000\u30005.1.2 未满十八周岁，但监护人（包括但不仅限于父母）予以书面同意的自然人；\n
\u3000\u30005.1.3 根据中国法律、法规成立并合法存在的公司等企业法人、事业单位、社团组织和其他组织。无民事行为能力人、限制民事行为能力人以及无经营或特定经营资格的组织不当注册为用户的，其与本公司之间的协议自始无效，本公司一经发现，有权立即注销该用户。\n
\u3000\u30005.2 用户有权按照本APP平台规定的程序和要求使用本APP平台向会员提供的各项网络服务，如果会员对该服务有异议，可以与本APP平台联系以便得到及时解决。\n
\u3000\u30005.3 用户在申请使用本APP平台网络服务时，必须向本APP平台提供准确的个人资料，如个人资料有任何变动，必须及时更新。\n
\u3000\u30005.4 用户须同意接受本APP平台通过电子邮件或其他方式向会员发送相关商业信息。\n
\u3000\u30005.5 用户在使用本APP平台服务时，必须遵守中华人民共和国相关法律法规的规定，不得利用本服务进行任何违法或不正当的活动，包括但不限于下列行为∶\n
\u3000\u30005.5.1 制作、复制、发布、传播或以其它方式传送含有下列内容之一的信息：\n
\u3000\u3000•反对宪法所确定的基本原则的\n
\u3000\u3000•危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；\n
\u3000\u3000•损害国家荣誉和利益的；\n
\u3000\u3000•煽动民族仇恨、民族歧视、破坏民族团结的；\n
\u3000\u3000•破坏国家宗教政策，宣扬邪教和封建迷信的；\n
\u3000\u3000•散布谣言，扰乱社会秩序，破坏社会稳定的；\n
\u3000\u3000•散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；\n
\u3000\u3000•侮辱或者诽谤他人，侵害他人合法权利的；\n
\u3000\u3000•煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；\n
\u3000\u3000•以非法民间组织名义活动的；\n
\u3000\u3000•含有虚假、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；\n
\u3000\u3000•含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的。\n
\u3000\u30005.5.2 不得利用潮App服务从事以下活动：\n
\u3000\u3000•未经允许，进入计算机信息网络或者使用计算机信息网络资源；\n
\u3000\u3000•未经允许，对计算机信息网络功能进行删除、修改或者增加；\n
\u3000\u3000•未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加；\n
\u3000\u3000•故意制作、传播计算机病毒等破坏性程序；\n
\u3000\u3000•其他危害计算机信息网络安全的行为。\n
\u3000\u30005.6 用户违反本协议或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，您同意赔偿本APP平台与合作公司、关联公司，并使之免受损害。对此，本APP平台有权视用户的行为性质，采取包括但不限于删除用户发布信息内容、暂停使用许可、终止服务、限制使用、回收本APP平台帐号、追究法律责任等措施。对恶意注册本APP平台帐号或利用本APP平台帐号进行违法活动、捣乱、骚扰、欺骗、其他用户以及其他违反本协议的行为，本APP平台有权回收其帐号。同时，本公司会视司法部门的要求，协助调查。\n
\u3000\u30005.7 用户不得对本APP平台任何部分通过任何方式进行复制、拷贝、出售、转售或用于任何其它商业目的。\n
\u3000\u30005.8 用户须对自己在使用本APP平台服务过程中的行为承担法律责任。用户承担法律责任的形式包括但不限于：对受到侵害者进行赔偿，以及在本APP平台运营公司首先承担了因用户行为导致的行政处罚或侵权损害赔偿责任后，用户应给予本APP平台运营公司等额的赔偿。\n
\u3000\u30006. 知识产权\n
\u3000\u30006.1 本APP平台网站及网站所使用的任何相关软件、程序、内容，包括但不限于作品、图片、档案、资料、网站构架、网站版面的安排、网页设计、经由本网站或广告商向用户呈现的广告或资讯，均由本公司或其它权利人依法享有相应的知识产权，包括但不限于著作权、商标权、专利权或其它专属权利等，受到相关法律的保护。未经本公司或权利人明示授权，用户保证不修改、出租、出借、出售、散布本网站及本网站所使用的上述任何资料和资源，或根据上述资料和资源制作成任何种类物品。\n
\u3000\u30006.2 本公司授予用户不可转移及非专属的使用权，使用户可以通过单机计算机使用本网站的目标代码（以下简称“软件”），但用户不得且不得允许任何第三方，复制、修改、创作衍生作品、进行还原工程、反向组译，或以其它方式破译或试图破译源代码，或出售、转让“软件”或对“软件”进行再授权，或以其它方式移转“软件”之任何权利。用户同意不以任何方式修改“软件”，或使用修改后的“软件”。\n
\u3000\u30006.3 本APP平台有权在所有由平台提供的功能界面标注“此功能由本APP平台提供”等相关版权信息。。\n
\u3000\u30006.4 用户不得经由非本APP平台所提供的界面使用本网站。\n
\u3000\u30007. 其他\n
\u3000\u30007.1 因不可抗力或者其他意外事件，使得本协议的履行不可能、不必要或者无意义的，双方均不承担责任。本协议所称之不可抗力意指不能预见、不能避免并不能克服的客观情况，包括但不限于战争、台风、水灾、火灾、雷击或地震、罢工、暴动、法定疾病、黑客攻击、网络病毒、电信部门技术管制、政府行为或任何其它自然或人为造成的灾难等客观情况。\n
\u3000\u30007.2 本条款及其修订本的有效性、履行和与本条款及其修订本效力有关的所有事宜，将受中华人民共和国法律约束，任何争议仅适用中华人民共和国法律。\n
\u3000\u30007.3 因本条款所引起的用户与本公司的任何纠纷或争议，首先应友好协商解决，协商不成的，用户在此同意将纠纷或争议提交本公司住所地有管辖权的人民法院诉讼解决。\n
\u3000\u30007.4用户正确提交注册程序所需的资料并确认本协议后，本协议在本APP平台与用户之间成立并生效。\n
\u3000\u30007.5本协议生效前的注册用户只需要使用原用户名及密码登录本APP平台网站重新接受并确认本协议，即可继续使用本APP平台的服务。\n
\u3000\u30007.6协议有效期：从用户同意本协议或使用本APP平台起至用户注销本APP平台服务止。\n
\u3000\u30007.7本协议如无特殊规定，双方应当使用电子邮件方式就本协议相关事项进行联系。\n
\u3000\u30007.8本APP平台各相关部门的电子邮箱以在本APP平台官方网站上注明的为准。\n
\u3000\u30007.9使用本APP平台即表示接受本APP平台服务协议及其所有附件。\n
\u3000\u30007.10本协议的最终解释权归本APP平台所有。</string>



</resources>
