<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gauge_48"
        android:background="@color/titleColor">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="40dp"
            android:src="@mipmap/back" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/login"/>
    </RelativeLayout>

    <com.zhichen.parking.widget.IconEditTextLayout
        android:id="@+id/login_username_edit"
        android:layout_marginLeft="@dimen/gauge_20"
        android:layout_marginRight="@dimen/gauge_20"
        android:layout_marginTop="@dimen/gauge_10"
        style="@style/IconEditTextLayout"
        zc:hint="@string/phone"
        zc:icon="@mipmap/icon_user" />
    <com.zhichen.parking.widget.IconEditTextLayout
        style="@style/IconEditTextLayout"
        android:id="@+id/login_password_edit"
        android:layout_marginLeft="@dimen/gauge_20"
        android:layout_marginRight="@dimen/gauge_20"
        android:layout_marginTop="@dimen/gauge_5"
        zc:hint="@string/psw"
        zc:icon="@mipmap/icon_password"
        zc:password="true" />

    <Button
        android:id="@+id/btn_login_submit"
        style="@style/long_item_btn"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/gauge_20"
        android:layout_marginRight="@dimen/gauge_20"
        android:text="@string/onceLogin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/gauge_20"
        android:layout_marginRight="@dimen/gauge_20"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/forgetpsw"
            android:textSize="@dimen/text_16"
            android:textColor="#8E8E8E" />

        <TextView
            android:id="@+id/tv_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/text_16"
            android:text="@string/onceRegister"
            android:textColor="#8E8E8E" />
    </RelativeLayout>

</LinearLayout>