<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aokente="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhichen.parking.widget.GlobalTitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        aokente:global_back="true"
        aokente:global_title="@string/acount_secrity">
    </com.zhichen.parking.widget.GlobalTitleLayout>
    <RelativeLayout
        android:id="@+id/change_logpsw"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/gauge_20"
        android:layout_height="@dimen/gauge_48">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/change_logpsw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/gauge_20"
            android:layout_marginLeft="@dimen/gauge_20"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/gauge_16"
            android:textColor="#434343"
            android:text="@string/change_logpsw"/>
        <ImageView
            style="@style/arrows"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/change_paypsw"
        android:layout_marginTop="@dimen/gauge_1"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/gauge_20"
        android:layout_height="@dimen/gauge_48">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/change_paypsw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/gauge_20"
            android:layout_marginLeft="@dimen/gauge_20"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#434343"
            android:text="@string/change_paypsw"/>
        <ImageView
            style="@style/arrows"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/change_findpaypsw"
        android:layout_marginTop="@dimen/gauge_1"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/gauge_20"
        android:layout_height="@dimen/gauge_48">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/change_findpsw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/gauge_20"
            android:layout_marginLeft="@dimen/gauge_20"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#434343"
            android:text="@string/change_findpaypsw"/>
        <ImageView
            style="@style/arrows"/>
    </RelativeLayout>

</LinearLayout>