<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aokente="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhichen.parking.widget.GlobalTitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        aokente:global_back="true"
        aokente:global_title="@string/my_scan">
    </com.zhichen.parking.widget.GlobalTitleLayout>
    <RelativeLayout
        android:id="@+id/rl_ScanScan"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/gauge_20"
        android:layout_height="@dimen/gauge_48">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/myscan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/gauge_40"
            android:layout_marginLeft="@dimen/gauge_20"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_16"
            android:textColor="#434343"
            android:text="@string/scan_scan"/>
        <ImageView
            style="@style/arrows"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_payCode"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingLeft="@dimen/gauge_20"
        android:layout_height="@dimen/gauge_48">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/pay_code"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/gauge_40"
            android:layout_marginLeft="@dimen/gauge_20"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="#434343"
            android:text="@string/pay_code"/>
        <ImageView
            style="@style/arrows"/>
    </RelativeLayout>

</LinearLayout>